[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apartment-hunter"
version = "0.0.0"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "fastapi[standard]>=0.113.0",
    "pydantic>=2.7.0",
    "uvicorn",
    "boto3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["clients*", "core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
